@@ -13,6 +13,7 @@ dillo-2.1
  - Tuned input width a bit.
  - Cleaned up resource embedding (forms)
  - Made cookierc parsing more robust.
+ - Switched a_UIcmd_save() to take its URL from history (not location bar).
    Patches: place (AKA corvid)
 +- Switched SSL-enabled to configure.in (./configure --enable-ssl).
  - Standardised the installation of dpid/dpidrc with auto* tools.
